--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste 2.1</title>
+    <title>Teste 2.2</title>
 </head>
 <body>
-    <h1>Teste 2</h1>
+    <h1>Teste 2 - Alteração de arquivo da main</h1>
+    <p>Arquivo alterado para fins de exercicio.</p>
 </body>
 </html>
